--- a/index.html
+++ b/index.html
@@ -41,6 +41,144 @@
             </figure>
         </section>
     </header>
-    <h1>Hola Mundo</h1>
+    <main class="main">
+        <section class="About" id="About">
+            <article class="About_container container">
+                <div class="About_text">
+                    <h3 class="subtitle2">About us</h3>
+                    <h2 class="subtitle">We speak the good food languaje</h2>
+                    <p class="parrafo">It is a long established fact that a
+                    be distracted by the readable content
+                    looking at its layout. The point of</p>
+                </div>
+                <figure class="About_imagen">
+                    <img src="./img/about.png" alt="">
+                </figure>
+            </article>
+        </section>
+        <section class="learn_container" id="Menu">
+            <h3 class="subtitle3">Food Menu</h3>
+            <h2 class="subtitle5">Fresh taste and grat price</h2>
+            <div class="learn articles">
+                <div class="tarjeta">
+                    <article class="learn_article">
+                        <img src="./img/food1.png" alt="">
+                        <h2 class="learn_title">Chicken Burger</h2>
+                        <p class="parrafo">Tasty Food</p>
+                        <p class="parrafo1">$11.00</p>
+                    </article>
+                </div>
+                <div class="tarjeta">
+                    <article class="learn_article">
+                        <img src="./img/food2.png" alt="">
+                        <h2 class="learn_title">Chicken Fry Pack</h2>
+                        <p class="parrafo">Tasty Food</p>
+                        <p class="parrafo1">$11.00</p>
+                    </article>
+                </div>
+                <div class="tarjeta">
+                    <article class="learn_article">
+                        <img src="./img/food3.png" alt="">
+                        <h2 class="learn_title">Special Beef Burger</h2>
+                        <p class="parrafo">Tasty Food</p>
+                        <p class="parrafo1">$11.00</p>
+                    </article>
+                </div>
+            </div>
+        </section>
+        <section class="Service" id="Service">
+            <h2 class="subtitle4">Services</h2>
+            <h1 class="subtitle">We provide best food services</h1>
+            <div class="Service_main container">
+                <article class="Service_text">
+                    <img src="./img/s1.png" alt="">
+                    <h2 class="subtitle3">Order</h2>
+                    <p class="parrafo">It is a long established
+                    be distracted by the readable
+                    looking at its layout. </p>
+                </article>
+                <article class="Service_text">
+                    <img src="./img/s2.png" alt="">
+                    <h2 class="subtitle3">Shipping</h2>
+                    <p class="parrafo">It is a long established
+                    be distracted by the readable
+                    looking at its layout.</p>
+                </article>
+                <article class="Service_text">
+                    <img src="./img/s3.png" alt="">
+                    <h2 class="subtitle3">Dellvered</h2>
+                    <p class="parrafo">It is a long established
+                    be distracted by the readable
+                    looking at its layout.</p>
+                </article>
+            </div>
+        </section>
+    </main>
+    <footer class="footer" id="Contact">
+        <section class="footer1">
+            <article class="footer_container container">
+                <h2 class="subtitle6">Menu Links</h2>
+                <ul class="footer_contact">
+                    <li class="footer_item">
+                        <a href="#">Home</a>
+                    </li>
+                    <li class="footer_item">
+                        <a href="#About">About</a>
+                    </li>
+                    <li class="footer_item">
+                        <a href="#Menu">Menu</a>
+                    </li>
+                    <li class="footer_item">
+                        <a href="#Service">Service</a>
+                    </li>
+                    <li class="footer_item">
+                        <a href="#Contact">Contact</a>
+                    </li>
+                </ul>
+                <h2 class="subtitle6">Our Service</h2>
+                <ul class="footer_contact">
+                    <li class="footer_item">
+                        <a href="#">Web Designer</a>
+                    </li>
+                    <li class="footer_item">
+                        <a href="#">Web Development</a>
+                    </li>
+                    <li class="footer_item">
+                        <a href="#">Marketing</a>
+                    </li>
+                    <li class="footer_item">
+                        <a href="#">Product Managment</a>
+                    </li>
+                    <li class="footer_item">
+                        <a href="#">Graphic</a>
+                    </li>
+                </ul>
+                <h2 class="subtitle6">Information</h2>
+                <ul class="footer_contact">
+                    <li class="footer_item">
+                        <a href="#">About us</a>
+                    </li>
+                    <li class="footer_item">
+                        <a href="#">Delivery Information</a>
+                    </li>
+                    <li class="footer_item">
+                        <a href="#">Privacy Policy</a>
+                    </li>
+                    <li class="footer_item">
+                        <a href="#">Terms & Conditions</a>
+                    </li>
+                </ul>
+            </section>
+            <section class="footer2">
+                <h2 class="contact">Contact us</h2>
+                <li class="item">
+                    <a href="#"><i class='bx bxl-whatsapp bx-tada-hover bx-md' style='color:#00ff19' ></i></a>
+                    <a href="#"><i class='bx bxl-instagram bx-tada-hover bx-md' style="color: red;"></i></a>
+                    <a href="#"><i class='bx bxl-twitter bx-tada-hover bx-md' style='color:#00a2ff' ></i></a>
+                    <a href="#"><i class='bx bxl-gmail bx-tada-hover bx-md' style='color:#ffffff'  ></i></a>
+                </li>
+            </section>
+        </article>
+    </footer>
 </body>
 </html>
