--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-    <link rel="stylesheet" href="./css/style.css">
-    <title>Tienda Online</title>
+    <link rel="website icon" href="https://mibucketcl2023.s3.amazonaws.com/images/home.png" alt="home">
+    <link rel="stylesheet" href="style.css">
+    <title>FOODS</title>
 </head>
 <body>
     <header class="header">
@@ -13,12 +14,12 @@
             <a href="#" class="nav_logo">Foods</a>
             <ul class="nav_list">
                 <li class="nav_item">
-                    <a href="#Home" class="nav_link">Home</a>
+                    <a href="#" class="nav_link">Home</a>
                 </li>
                 <li class="nav_item">
                     <a href="#About" class="nav_link">About</a>
                 </li>
-                <li class="nav-item">
+                <li class="nav_item">
                     <a href="#Menu" class="nav_link">Menu</a>
                 </li>
                 <li class="nav_item">
@@ -34,26 +35,26 @@
             <article class="header_text container">
                 <h1 class="header_title">Full Website</h1>
                 <h2 class="header_title2">Foods the Most Precious Thing</h2>
-                <a href="#" class="header_cta">Today's Menu</a>
+                <a href="#Menu" class="header_cta">Today's Menu</a>
             </article>
             <figure class="header_imagen container">
-                <img src="./img/home.png" alt="">
+                <img src="https://mibucketcl2023.s3.amazonaws.com/images/home.png" alt="Home">
             </figure>
         </section>
     </header>
     <main class="main">
         <section class="About" id="About">
             <article class="About_container container">
+                <figure class="About_imagen">
+                    <img src="https://mibucketcl2023.s3.amazonaws.com/images/about.png" alt="About">
+                </figure>
                 <div class="About_text">
-                    <h3 class="subtitle2">About us</h3>
-                    <h2 class="subtitle">We speak the good food languaje</h2>
+                    <h2 class="subtitle">About us</h3>
+                    <h3 class="subtitle2">We speak the good food languaje</h2>
                     <p class="parrafo">It is a long established fact that a
                     be distracted by the readable content
                     looking at its layout. The point of</p>
                 </div>
-                <figure class="About_imagen">
-                    <img src="./img/about.png" alt="">
-                </figure>
             </article>
         </section>
         <section class="learn_container" id="Menu">
@@ -62,7 +63,7 @@
             <div class="learn articles">
                 <div class="tarjeta">
                     <article class="learn_article">
-                        <img src="./img/food1.png" alt="">
+                        <img src="https://mibucketcl2023.s3.amazonaws.com/images/food1.png " alt="Food1">
                         <h2 class="learn_title">Chicken Burger</h2>
                         <p class="parrafo">Tasty Food</p>
                         <p class="parrafo1">$11.00</p>
@@ -70,7 +71,7 @@
                 </div>
                 <div class="tarjeta">
                     <article class="learn_article">
-                        <img src="./img/food2.png" alt="">
+                        <img src="https://mibucketcl2023.s3.amazonaws.com/images/food2.png " alt="Food2">
                         <h2 class="learn_title">Chicken Fry Pack</h2>
                         <p class="parrafo">Tasty Food</p>
                         <p class="parrafo1">$11.00</p>
@@ -78,7 +79,7 @@
                 </div>
                 <div class="tarjeta">
                     <article class="learn_article">
-                        <img src="./img/food3.png" alt="">
+                        <img src="https://mibucketcl2023.s3.amazonaws.com/images/food3.png " alt="Food3">
                         <h2 class="learn_title">Special Beef Burger</h2>
                         <p class="parrafo">Tasty Food</p>
                         <p class="parrafo1">$11.00</p>
@@ -88,24 +89,24 @@
         </section>
         <section class="Service" id="Service">
             <h2 class="subtitle4">Services</h2>
-            <h1 class="subtitle">We provide best food services</h1>
+            <h1 class="subtitle7">We provide best food services</h1>
             <div class="Service_main container">
                 <article class="Service_text">
-                    <img src="./img/s1.png" alt="">
+                    <img src="https://mibucketcl2023.s3.amazonaws.com/images/s1.png " alt="S1">
                     <h2 class="subtitle3">Order</h2>
                     <p class="parrafo">It is a long established
                     be distracted by the readable
                     looking at its layout. </p>
                 </article>
                 <article class="Service_text">
-                    <img src="./img/s2.png" alt="">
+                    <img src="https://mibucketcl2023.s3.amazonaws.com/images/s2.png " alt="S2">
                     <h2 class="subtitle3">Shipping</h2>
                     <p class="parrafo">It is a long established
                     be distracted by the readable
                     looking at its layout.</p>
                 </article>
                 <article class="Service_text">
-                    <img src="./img/s3.png" alt="">
+                    <img src="https://mibucketcl2023.s3.amazonaws.com/images/s3.png " alt="S3">
                     <h2 class="subtitle3">Dellvered</h2>
                     <p class="parrafo">It is a long established
                     be distracted by the readable
@@ -115,7 +116,7 @@
         </section>
     </main>
     <footer class="footer" id="Contact">
-        <section class="footer1">
+        <!-- <section class="footer1">
             <article class="footer_container container">
                 <h2 class="subtitle6">Menu Links</h2>
                 <ul class="footer_contact">
@@ -168,17 +169,17 @@
                         <a href="#">Terms & Conditions</a>
                     </li>
                 </ul>
-            </section>
-            <section class="footer2">
-                <h2 class="contact">Contact us</h2>
-                <li class="item">
-                    <a href="#"><i class='bx bxl-whatsapp bx-tada-hover bx-md' style='color:#00ff19' ></i></a>
-                    <a href="#"><i class='bx bxl-instagram bx-tada-hover bx-md' style="color: red;"></i></a>
-                    <a href="#"><i class='bx bxl-twitter bx-tada-hover bx-md' style='color:#00a2ff' ></i></a>
-                    <a href="#"><i class='bx bxl-gmail bx-tada-hover bx-md' style='color:#ffffff'  ></i></a>
-                </li>
-            </section>
-        </article>
+            </article>
+        </section> -->
+        <section class="footer2">
+            <h2 class="contact">Contact us</h2>
+            <li class="item">
+                <a href="https://web.whatsapp.com/"><i class='bx bxl-whatsapp bx-tada-hover bx-md' style='color:#00ff19' ></i></a>
+                <a href="https://www.instagram.com/"><i class='bx bxl-instagram bx-tada-hover bx-md' style="color: red;"></i></a>
+                <a href="https://twitter.com/?lang=es"><i class='bx bxl-twitter bx-tada-hover bx-md' style='color:#00a2ff' ></i></a>
+                <a href="https://www.google.com/intl/es-419/gmail/about/"><i class='bx bxl-gmail bx-tada-hover bx-md' style='color:#ffffff'  ></i></a>
+            </li>
+        </section>
     </footer>
 </body>
 </html>
